# scitex-io

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  MIGRATION-NOTES.md  README.md  codecov.yml  pyproject.toml
.github/ci/: run-in-sif.sh
.github/workflows/: ci.yml  cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  newb-docs-quality-on-ubuntu-latest.yml  newb.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-io-quality-audit-on-ubuntu-latest.yml  test.yml
.scitex/dev/: config.yaml
.scitex/io/runtime/: README.md
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
docs/sphinx/: api.rst  cli.rst  conf.py  examples.rst  explorers.rst  formats.rst  index.rst  installation.rst  mcp.rst  quickstart.rst  registry.rst  requirements.txt
docs/sphinx/api/: scitex_io.rst
examples/: 00_run_all.sh  01_basic_save_load.py  02_custom_format.py  03_load_configs.py  04_dotdict.py  05_metadata_embedding.py  scitex_io_lint.sh
examples/01_basic_save_load_out/: array.npy  config.json  config.yaml  data.csv
examples/03_load_configs_out/: merged_config.json
examples/05_metadata_embedding_out/: figure_metadata.json
src/scitex_io/: README.md  __init__.py  __main__.py  _builtin_handlers.py  _cache.py  _flush.py  _glob.py  _image_csv_handler.py  _linter_plugin.py  _load.py  _load_cache.py  _load_configs.py  _optional_providers.py  _path.py  _registry.py  _save.py  _symlink.py  _utils.py
src/scitex_io/_cli/: __init__.py  _apis.py  _configs.py  _info.py  _main.py  _mcp.py  _skills.py  _version.py
src/scitex_io/_load_modules/: __init__.py  _bibtex.py  _con.py  _eeg.py  _image.py  _optuna.py  _pandas.py  _pdf.py  _pdf_content_extractors.py  _pdf_text_extractors.py  _pdf_utils.py  _sqlite3.py  _zarr.py
src/scitex_io/_loading/: __init__.py  _load.py  _load_cache.py  _load_configs.py
src/scitex_io/_mcp/: __init__.py  _resources.py  server.py
src/scitex_io/_metadata_modules/: embed_metadata_svg.py  read_metadata_svg.py
src/scitex_io/_observers/: __init__.py
src/scitex_io/_path_modules/: __init__.py  _mv_to_tmp.py  _path.py  _symlink.py
src/scitex_io/_save_modules/: __init__.py  _bibtex.py  _html.py  _image.py  _listed_dfs_as_csv.py  _listed_scalars_as_csv.py  _mp4.py  _optuna_study_as_csv_and_pngs.py  _plotly.py  _tex.py  _zarr.py
src/scitex_io/_sphinx_html/: .buildinfo  cli.html  examples.html  explorers.html  formats.html  genindex.html  index.html  installation.html  mcp.html  objects.inv  py-modindex.html  quickstart.html  registry.html  search.html  searchindex.js
src/scitex_io/bundle/: _Bundle.py  __init__.py  _children.py  _core.py  _loader.py  _mpl_helpers.py  _nested.py  _saver.py  _types.py  _validation.py
src/scitex_io/skills/: SKILL.md
src/scitex_io/utils/: __init__.py  _compat.py  _compress_hdf5.py  _h5_helpers.py  h5_to_zarr.py
tests/: conftest.py  test__cache.py  test__flush.py  test__glob.py  test__json2md.py  test__load_configs.py  test__mv_to_tmp.py  test__path.py  test__reload.py  test_examples.py  test_registry.py  test_save_load.py
tests/_load_modules/: test__catboost.py  test__con.py  test__eeg.py  test__hdf5.py  test__image.py  test__joblib.py  test__markdown.py  test__matlab.py  test__optuna.py  test__pdf.py  test__pickle.py  test__torch.py  test__xml.py
tests/_metadata_modules/: test_embed_metadata_png.py  test_embed_metadata_svg.py  test_read_metadata_svg.py
tests/_save_modules/: test__optuna_study_as_csv_and_pngs.py  test__plot_scitex.py  test__stx_bundle.py
tests/develop/: test_audit.py
tests/examples/: test_01_basic_save_load.py  test_02_custom_format.py  test_03_load_configs.py  test_04_dotdict.py  test_05_metadata_embedding.py  test_scitex_io_lint.py
tests/integration/: test__path_real.py  test__save_branches.py  test_cross_package_imports.py  test_figrecipe_edge.py
tests/integration/_load_modules/: test__docx_real.py  test__optuna_real.py  test__zarr_real.py
tests/integration/_save_modules/: test__bibtex_real.py  test__excel_real.py  test__hdf5_real.py  test__tex_real.py  test__zarr_real.py
tests/scitex_io/: test___main__.py  test__builtin_handlers.py  test__cache.py  test__flush.py  test__glob.py  test__image_csv_handler.py  test__image_modules.py  test__json2md.py  test__linter_plugin.py  test__load_cache.py  test__metadata.py  test__mv_to_tmp.py  test__optional_providers.py  test__optional_providers_db.py  test__optional_providers_stats.py  test__path.py  test__path_real.py  test__registry.py  test__reload.py  test__save.py  test__save_branches.py  test__save_routing.py  test__shims.py  test__utils.py  test_image_kwargs.py  test_load_csv_headerless.py  test_save_path_env_routing.py
tests/scitex_io/_cli/: test___init__.py  test__apis.py  test__configs.py  test__info.py  test__main.py  test__mcp.py  test__skills.py  test__version.py
tests/scitex_io/_load_modules/: test__H5Explorer.py  test__ZarrExplorer.py  test__bibtex.py  test__catboost.py  test__con.py  test__docx.py  test__docx_real.py  test__eeg.py  test__hdf5.py  test__image.py  test__joblib.py  test__json.py  test__markdown.py  test__matlab.py  test__numpy.py  test__optuna.py  test__optuna_real.py  test__pandas.py  test__pdf.py  test__pdf_content_extractors.py  test__pdf_text_extractors.py  test__pickle.py  test__sqlite3.py  test__torch.py  test__txt.py  test__xml.py  test__yaml.py  test__zarr.py  test__zarr_real.py
tests/scitex_io/_loading/: test__load.py  test__load_cache.py  test__load_configs.py
tests/scitex_io/_mcp/: test__tools_extra.py  test_server.py
tests/scitex_io/_metadata_modules/: test__embed.py  test__read.py  test__utils.py  test_embed_metadata_jpeg.py  test_embed_metadata_jpeg_pdf.py  test_embed_metadata_pdf.py  test_embed_metadata_png.py  test_embed_metadata_svg.py  test_read_metadata_jpeg.py  test_read_metadata_pdf.py  test_read_metadata_png.py  test_read_metadata_svg.py
tests/scitex_io/_observers/: test___init__.py
(+176 files in other folders)
