[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-io"
version = "0.3.1"
description = "Universal scientific data I/O with plugin registry"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
authors = [
    { name = "Yusuke Watanabe", email = "noreply@scitex.ai" },
]
keywords = [
    "scientific-data",
    "io",
    "hdf5",
    "zarr>=3",
    "csv",
    "numpy",
    "pandas",
    "registry",
    "plugin",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "tqdm",
    "PyYAML",
    "ruamel.yaml",
    # mne is INTENTIONALLY OMITTED from core deps. Bare `pip install
    # scitex-io` must not pull ~150MB of mne + its sklearn / pooch /
    # decorator chain when the only mne-using surface is two niche
    # loader modules (`.con` / `.eeg`). Modules that require mne
    # (`_load_modules/_con.py`, `_load_modules/_eeg.py`) already
    # import optionally and raise a clear ImportError naming the
    # extra. Install with `pip install 'scitex-io[mne]'` to
    # opt back in. See proj-paper-ripple-wm's SIF dogfood signal
    # (2026-06-07) for the broader motivation (scitex-gen v0.1.13
    # applied the same pattern with torch).
    "numpy",
    "pandas",
    "click>=8.0.0",
    "rich>=13.0.0",
    "scitex-dev>=0.11.7",
    # scitex_io._save imports scitex_logging at module top (also _bibtex
    # load/save modules) — the runtime needs it.
    "scitex-logging>=0.1.0",
    # `scitex_io.glob` documents natural sorting as part of its contract;
    # the previous try/import fallback to `sorted` silently degraded to
    # lexical order, breaking `test_glob_natural_sorting` and any user
    # who relied on `file1.txt, file2.txt, …, file10.txt` ordering.
    # Make natsort a hard runtime dep so the documented behaviour holds.
    "natsort>=8.0",
]

[project.optional-dependencies]
# mne is OPTIONAL — the loaders in src/scitex_io/_load_modules/_con.py
# and _eeg.py import it lazily and raise a clear ImportError naming
# the extra when called without it installed. Keep the literal
# package name here so `pip install 'scitex-io[mne]'` resolves both
# at runtime and during editable installs.
mne = [
    "mne",
]
mcp = [
    "fastmcp>=2.0",
]
scientific = [
    "scipy",
    "h5py",
    "zarr>=3",
    "numcodecs",
    "matplotlib",
]
optuna = [
    "optuna",
]
# Optional synergy: when figrecipe is installed, scitex_io.save()/load()
# gain figrecipe's reproducible figure-bundle formats (.fig.zip / .plt.zip)
# via the registry. Absent figrecipe, those extensions simply stay
# unregistered — import scitex_io never hard-depends on figrecipe.
figrecipe = [
    "figrecipe>=0.28",
]
# Optional synergy: when scitex-db is installed, scitex_io.load("foo.db")
# dispatches to scitex_db.SQLite3 (the full wrapper with mixins:
# get_rows -> DataFrame, load_array / save_array, etc.). Absent
# scitex-db, the `.db` extension stays unregistered and stx.io.load
# raises a clear "No load handler … install scitex-io[db]" error
# rather than silently returning a raw sqlite3.Connection. See
# _optional_providers._register_scitex_db.
db = [
    "scitex-db>=0.1.11",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "matplotlib",
    "plotly",
    "Pillow",
    # Optional features whose tests live in the suite — installed in [dev]
    # so a fresh `pip install -e .[dev]` runs the full suite. Production
    # users opt in via `pip install scitex-io[<extra>]`. See
    # _skills/general/01_ecosystem_02_dependency-and-version-pinning.md
    # `[dev]` extras completeness.
    #
    # IMPORTANT: list deps LITERALLY here (not via the
    # `scitex-io[mcp]` etc. self-reference). pip cannot resolve the
    # package's own name during ``pip install -e .[dev]`` because the
    # package isn't on PyPI at install time. Same lesson as
    # scitex-gen v0.1.13's torch move (and the structural-only publish
    # gate added in the same release). The invariant: [dev] ⊇ [all]
    # by enumeration — every extra's deps must also appear here.
    "mne",                # tested via _load_modules/_con + _eeg
    "fastmcp>=2.0",       # tested via scitex_io._mcp_server
    "numcodecs",          # tested via [scientific] zarr/blosc paths
    "pymatreader",        # tested via _load_modules/_matlab fallback path
    "openpyxl",           # excel writes go through this engine
    "pyarrow",            # parquet/feather backend
    "torch",              # tested via _save_modules/_torch
    "joblib",             # tested via _save_modules/_joblib
    "PyPDF2",             # legacy pdf reader path
    "pypdf",              # current pdf reader path
    "pdfplumber",         # _pdf_content_extractors table extraction
    "PyMuPDF",            # _pdf_content_extractors fitz backend (image/metadata)
    "scikit-learn",       # optuna visualization (importances plot)
    "piexif",             # JPEG metadata sidecar in _image_csv_handler
    "markdown",           # md handler
    "html2text",          # html2md handler
    "ruamel.yaml",        # YAML round-trip tests
    "kaleido",            # plotly static image export (png/jpeg/svg/pdf)
    "python-docx",        # .docx loader tests
    "optuna",             # tested via _load_modules/_optuna + _save_modules/_optuna_study
    "scipy",              # [scientific] core
    "h5py",               # [scientific] hdf5
    "zarr>=3",            # [scientific] zarr
    "figrecipe>=0.28",    # optional synergy: .fig.zip/.plt.zip bundle dispatch
    "scitex-stats>=0.2.22",  # optional synergy: .stats.zip + Stats schema (scitex_stats._dataclasses.Stats, published in 0.2.22)
    "scitex-db>=0.1.11",   # optional synergy: .db dispatch via SQLite3 wrapper
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
# `[all]` aggregates every optional dep so a user opting in to "every
# feature" lands at the maximum-functionality install. Lists deps
# LITERALLY (not via the `scitex-io[mcp]` etc. self-reference, which
# fails to resolve during editable installs because the package isn't
# on PyPI yet at install time). Mirrors the union of `[mne]`,
# `[mcp]`, `[scientific]`, `[optuna]`, `[figrecipe]`, `[db]`.
# Invariant: `[dev]` ⊇ `[all]` (the test suite must cover every
# optional-dep code path) — keep both in sync when adding a new
# optional dep.
all = [
    "mne",
    "fastmcp>=2.0",
    "scipy",
    "h5py",
    "zarr>=3",
    "numcodecs",
    "matplotlib",
    "optuna",
    "figrecipe>=0.28",
    "scitex-db>=0.1.11",
]

[project.scripts]
scitex-io = "scitex_io._cli:main"

[project.entry-points."scitex_dev.docs"]
scitex-io = "scitex_io"

[project.entry-points."scitex_dev.skills"]
scitex-io = "scitex_io"

[project.entry-points."scitex_dev.linter.plugins"]
io = "scitex_io._linter_plugin:get_plugin"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-io"
Documentation = "https://scitex-io.readthedocs.io/"
Repository = "https://github.com/ywatanabe1989/scitex-io.git"
Issues = "https://github.com/ywatanabe1989/scitex-io/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_io"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
# Dump every thread's stack if a test runs longer than 120s. Pytest
# never finishes silently — if something deadlocks (waiting on torch
# init, matplotlib backend probe, subprocess coverage handshake,
# audit-all subprocess walk), faulthandler names the exact test +
# line in the CI log instead of leaving us reading the runner clock.
# Same hygiene as scitex-gen v0.1.13. Cost: zero on green runs;
# ground-truth diagnostic on hangs.
faulthandler_timeout = 120

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/scitex_io/__init__.py" = ["E402"]
